--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,7 @@ flutter:
     - assets/loginassets/loginbackground/
     - assets/categoriesassets/appbar/
     - assets/categoriesassets/search/
+    - assets/categoriesassets/banner/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
