--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,6 +66,7 @@ flutter:
     - assets/categoriesassets/appbar/
     - assets/categoriesassets/search/
     - assets/categoriesassets/banner/
+    - assets/categoriesassets/categorieslistviewitem/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
