--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,6 +68,7 @@ flutter:
     - assets/categoriesassets/banner/
     - assets/categoriesassets/categorieslistviewitem/
     - assets/categoriesassets/restaurantlistviewitem/
+    - assets/categoriesassets/bottomnavigationbar/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
