--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,6 +69,7 @@ flutter:
     - assets/categoriesassets/categorieslistviewitem/
     - assets/categoriesassets/restaurantlistviewitem/
     - assets/categoriesassets/bottomnavigationbar/
+    - assets/detailsassets/backgroundtopimage/backgroundtopimage.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
