--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,6 +70,7 @@ flutter:
     - assets/categoriesassets/restaurantlistviewitem/
     - assets/categoriesassets/bottomnavigationbar/
     - assets/detailsassets/backgroundtopimage/backgroundtopimage.png
+    - assets/detailsassets/topiconsbutton/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
